--- a/backend/templates/default.conf
+++ b/backend/templates/default.conf
@@ -12,8 +12,8 @@ server {
   #listen [::]:80 default;
 {% endif %}
   server_name default-host.localhost;
-  access_log /data/logs/default-host_access.log combined;
-  error_log /data/logs/default-host_error.log warn;
+#  access_log /data/logs/default-host_access.log combined;
+#  error_log /data/logs/default-host_error.log warn;
 {% include "_exploits.conf" %}
 
   include conf.d/include/letsencrypt-acme-challenge.conf;
